--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
+    "@electron/packager": "^18.3.2",
     "@eslint/js": "^9.14.0",
     "@quasar/app-vite": "^2.0.0",
     "@vue/eslint-config-prettier": "^10.1.0",
